[package]
name = "ulog-rs"
version = "0.0.3"
edition = "2021"
authors = ["Brian Stearns <brianw.stearns+crates@gmail.com>"]
description = "A parser for the PX4 ULog file format"
repository = "https://github.com/BWStearns/ulog-rs"
readme = "README.md"
license = "MIT"
keywords = ["ulog", "px4", "parser", "logging"]
categories = ["aerospace::drones", "aerospace::unmanned-aerial-vehicles"]

[dependencies]
byteorder = "1.4"      # For reading binary data in little-endian format
thiserror = "1.0"      # For error handling
bytes = "1.4"          # For working with bytes
log = "0.4"
serde_json = "1.0.133"
serde = "1.0.216"
serde_derive = "1.0.216"
clap = { version = "4.5.23", features = ["derive"] }

[dependencies.dirs]
version = "5.0"        # For finding home directory

[dev-dependencies]
tempfile = "3.5"       # For tests that need temporary files

[[bin]]
name = "profiler"
